@@ -9,6 +9,7 @@ import pytest
 
 # Before removing what appear to be unused imports think twice.
 # Some of the tests use eval, which requires the imports.
+import refnx
 import refnx.reflect._reflect as _reflect
 from refnx.analysis import (
     Transform,
@@ -314,6 +315,28 @@ class TestReflect:
         with use_reflect_backend(backend) as kernel:
             calc = kernel(q, slabs)
         assert_almost_equal(calc, refl1d[1])
+
+    @pytest.mark.skipif(not hasattr(refnx.reflect._creflect, 'vec_abeles'), reason="vec_abeles not available")
+    def test_vec_abeles(self):
+        w = np.array(
+            [
+                [0, 2.07, 0, 0],
+                [100, 3.45, 0.1, 3],
+                [200, 5.0, 0.01, 1],
+                [0, 6.0, 0, 5],
+            ]
+        )
+        var = w.flatten() * 0.05
+        var = var * var
+        rng = np.random.default_rng()
+        w_noise = rng.multivariate_normal(
+            w.flatten(), np.diag(var), size=(1000,)
+        )
+        w_noise = np.reshape(w_noise, (1000,) + w.shape)
+        x = np.geomspace(0.005, 0.5, 1001)
+        y = refnx.reflect._creflect.vec_abeles(x, w_noise)
+        y_test = np.array([refnx.reflect.abeles(x, _w) for _w in w_noise])
+        assert_allclose(y, y_test)
 
     @pytest.mark.parametrize("backend", BACKENDS)
     @pytest.mark.filterwarnings("ignore:Using the SLOW")
